--- a/webfront.css
+++ b/webfront.css
@@ -2,6 +2,11 @@
   box-sizing: border-box;
 }
 
+h1.inset{
+border-style: inset;
+  border-size: 45px;
+}
+
 body {
   font-family: "Comic Sans MS", sans-serif;
   min-height:100%;
