--- a/webfront.css
+++ b/webfront.css
@@ -14,8 +14,40 @@ body {
 
    padding-bottom:600px;
 }
+
+/* Defines the active page's link colour */
 .active {
-  background-color: #04AA6D;
+  background-color: lime;
+}
+
+/* Nav Links */
+
+ul {
+  display: inline;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #333;
+  position: sticky;
+  top: 0;
+  width: 100%;
+}
+li {
+  float: left;
+}
+
+li a {
+  display: block;
+  color: pink;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+/* Change the link color to #111 (black) on hover */
+li a:hover {
+  background-color: #111;
 }
 
 iframe {
@@ -70,33 +102,7 @@ p {
   color: #1B1D1A;
 }
 
-ul {
-  display: inline;
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  background-color: #333;
-  position: sticky;
-  top: 0;
-  width: 100%;
-}
-li {
-  float: left;
-}
 
-li a {
-  display: block;
-  color: pink;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-}
-
-/* Change the link color to #111 (black) on hover */
-li a:hover {
-  background-color: #111;
-}
 
 /* Style the footer */
 footer {
