--- a/webfront.css
+++ b/webfront.css
@@ -8,7 +8,7 @@ border-style: inset;
 }
 
 body {
-  font-family: "Comic Sans MS", sans-serif;
+  font-family: "Ldfcomicsans-jj7l.ttf", sans-serif;
   min-height:100%;
    position:relative;
 
